name:                ezoe
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ezoe
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , http-conduit
                     , feed
                     , text
                     , regex-tdfa
                     , ansi-wl-pprint
                     , tagsoup
                     , bytestring
                     , optparse-declarative
  hs-source-dirs:      src
  default-language:    Haskell2010
